# LLM-Step-by-step

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/: byte-pair-encoder.py
src/attention/: mini_transformer.py  multi_head_attention.py  self_attention.py
src/bpe/: byte_pair_encoder.py
src/bpe/encoder/: byte_pair_encoder.py
src/bpe/model/: dataset.py  main.py  model.py  trainer.py
src/positional_embeddings/: learned_positional_embeddings.py  sinusoidal_positional_embeddings.py
src/transformer/: transformer_block.py
tests/: test_byte_pair_encoder.py  test_multi_head_attention.py  test_self_attention.py  test_trainer.py  test_transformer_block.py
